// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test NPElement should render correctly 1`] = `
<div>
  <div
    class="icon loading"
    id="1234"
  >
    <img
      src="img_thumbnail_url"
    />
  </div>
</div>
`;

exports[`test NPElement should render correctly 2`] = `
<div>
  <div
    class="icon"
    id="1234"
  >
    <img
      src="img_thumbnail_url"
    />
  </div>
</div>
`;
